--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "1.4.5-lts.1",
     "next": "14.2.5",
     "next-auth": "5.0.0-beta.20",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -37,8 +38,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.14.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
