--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "5.0.0-beta.20",
     "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
